# MAS-1

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Floyd.ipynb  KarateClub.ipynb  README.md  environment.yml  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
data/: Iris.csv  Project.csv
gephi/: BA.gephi  Iris.gephi  Random.gephi  project.gephi
mas/: __init__.py  adjacency.py  clustering.py  floyd.py  generate.py
notebooks/: BA.ipynb  Floyd.ipynb  Iris.ipynb  KSTest.ipynb  KarateClub.ipynb  NetworkX.ipynb  Project.ipynb  RandomDistribution.ipynb  RandomNetwork.ipynb  Schlukovani.ipynb
tests/: conftest.py  test_adjacency.py  test_clustering.py  test_floyd.py
tests/data/: eradius.csv  knn.csv  links.csv
