[tool.poetry]
name = "mas"
version = "0.1.0"
description = "Metody analýzy sítí I"
authors = ["Ratmir Gaitov <gaitovrat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
networkx = "^3.4.1"
scipy = "^1.14.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
